<?xml version="1.0" encoding="utf-8"?>
<com.xuexiang.xui.widget.layout.XUILinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/white"
    android:elevation="40dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp"
    app:xui_radius="15dp"
    app:xui_shadowAlpha="0.5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true" />

        <com.xuexiang.xui.widget.button.shadowbutton.ShadowButton
            android:id="@+id/bt_delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@drawable/ic_delete"
            app:sb_radius="6dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_good_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/good_name"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_departure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/iv_swap"
            android:gravity="start"
            android:text="@string/departure"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/iv_swap"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_swap" />

        <TextView
            android:id="@+id/tv_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_swap"
            android:gravity="end"
            android:text="@string/destination"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <com.xuexiang.xui.widget.edittext.ValidatorEditText
                android:id="@+id/input_price"
                style="@style/EditText.Normal"
                android:layout_width="wrap_content"
                android:ems="3"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text="30"
                android:textSize="22sp"
                app:vet_tipPosition="top" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <com.xuexiang.xui.widget.edittext.ValidatorEditText
                android:id="@+id/input_weight"
                style="@style/EditText.Normal"
                android:layout_width="wrap_content"
                android:ems="3"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text="30"
                android:textSize="22sp"
                app:vet_tipPosition="top" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price" />

            <com.xuexiang.xui.widget.edittext.ValidatorEditText
                android:id="@+id/input_total_price"
                style="@style/EditText.Normal"
                android:layout_width="wrap_content"
                android:ems="3"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text="30"
                android:textSize="22sp"
                app:vet_tipPosition="top" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oil_card" />

            <com.xuexiang.xui.widget.edittext.ValidatorEditText
                android:id="@+id/input_oil_card"
                style="@style/EditText.Normal"
                android:layout_width="wrap_content"
                android:ems="3"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text="30"
                android:textSize="22sp"
                app:vet_tipPosition="top" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/cb_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/cb_oil_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_note"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_note" />

    <com.xuexiang.xui.widget.edittext.MultiLineEditText
        android:id="@+id/input_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:visibility="gone" />

</com.xuexiang.xui.widget.layout.XUILinearLayout>